fix: layout issue with width overflow

--- a/style/elbe.scss
+++ b/style/elbe.scss
@@ -74,6 +74,8 @@ body,
   &.dark :focus-visible{
     outline: .15rem solid white;
   }
+
+  width: 100vw;
 }
 
 // =============== TOOLTIP ===============
